src/snapshots/zeek_lsp__query__test__decls-2.snap
---
source: src/query.rs
assertion_line: 293
expression: func_decls

---
[
    Decl {
        id: "x",
        kind: Variable,
        is_export: false,
        range: Range {
            start: Position {
                line: 11,
                character: 34,
            },
            end: Position {
                line: 11,
                character: 44,
            },
        },
        selection_range: Range {
            start: Position {
                line: 11,
                character: 40,
            },
            end: Position {
                line: 11,
                character: 41,
            },
        },
        documentation: "local x=1;",
    },
]
