src/snapshots/zeek_lsp__query__test__decls.snap
---
source: src/query.rs
assertion_line: 280
expression: root_decls

---
[
    Decl {
        id: "x",
        kind: Const,
        is_export: true,
        range: Range {
            start: Position {
                line: 3,
                character: 18,
            },
            end: Position {
                line: 3,
                character: 37,
            },
        },
        selection_range: Range {
            start: Position {
                line: 3,
                character: 24,
            },
            end: Position {
                line: 3,
                character: 25,
            },
        },
        documentation: "const x = 1 &redef;",
    },
    Decl {
        id: "y",
        kind: Global,
        is_export: true,
        range: Range {
            start: Position {
                line: 4,
                character: 18,
            },
            end: Position {
                line: 4,
                character: 31,
            },
        },
        selection_range: Range {
            start: Position {
                line: 4,
                character: 25,
            },
            end: Position {
                line: 4,
                character: 26,
            },
        },
        documentation: "global y = 1;",
    },
    Decl {
        id: "Y",
        kind: Type,
        is_export: false,
        range: Range {
            start: Position {
                line: 7,
                character: 14,
            },
            end: Position {
                line: 9,
                character: 16,
            },
        },
        selection_range: Range {
            start: Position {
                line: 7,
                character: 19,
            },
            end: Position {
                line: 7,
                character: 20,
            },
        },
        documentation: "type Y: record {",
    },
    Decl {
        id: "zeek_init",
        kind: Event,
        is_export: false,
        range: Range {
            start: Position {
                line: 11,
                character: 14,
            },
            end: Position {
                line: 14,
                character: 15,
            },
        },
        selection_range: Range {
            start: Position {
                line: 11,
                character: 20,
            },
            end: Position {
                line: 11,
                character: 29,
            },
        },
        documentation: "event zeek_init() { local x=1; ",
    },
]
