src/snapshots/zeek_lsp__query__test__decls_-2.snap
---
source: src/query.rs
assertion_line: 387
expression: func_decls

---
[
    Decl {
        module: String(
            "bar",
        ),
        id: "x",
        fqid: "bar::x",
        kind: Variable,
        is_export: false,
        range: Range {
            start: Position {
                line: 12,
                character: 34,
            },
            end: Position {
                line: 12,
                character: 44,
            },
        },
        selection_range: Range {
            start: Position {
                line: 12,
                character: 40,
            },
            end: Position {
                line: 12,
                character: 41,
            },
        },
        documentation: "```zeek\nlocal x=1;\n```",
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "/foo/bar.zeek",
            query: None,
            fragment: None,
        },
    },
]
